# dream_game

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  app.py  app_workflow.py  prompt_config.py  pyproject.toml  requirements.txt  run_game.py  start.sh  workflow.py
llm/role/: Charac.py  CharacLLM.py  Personality.py  Soul.py  SoulLLM.py
llm/scene/: SituationA.py  SituationALLM.py  SituationAOpt.py  SituationAOptLLM.py  SituationAResult.py  SituationB.py  SituationBOpt.py  SituationBResult.py  SituationC.py  SituationCOpt.py  SituationCResult.py
llm/story/: Background.py  BackgroundLLM.py  Condition.py  ConditionLLM.py  Dream.py  DreamLLM.py  Ending.py  Theme.py  ThemeLLM.py
prompts/: soul.py  theme.py
static/css/: style.css
static/js/: stars.js  typewriter.js
templates/: base.html  choice.html  ending.html  index.html  loading.html
tools/: Search.py  __init__.py
